# django-boilerplate

./: .auto-claude-status  .claude_settings.json  .env.example  .gitignore  .pre-commit-config.yaml  DEV_SECURITY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MVP-TASKS.md  PRD.md  PROD_SECURITY.md  README.md  WEBSOCKET_IMPLEMENTATION.md  WEBSOCKET_QUICK_REFERENCE.md  WEBSOCKET_USAGE.md  conftest.py  frontend-plan.md  frontend-prd.md  pyproject.toml  pytest.ini  pytest_plugins.py  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
backend/: celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal
backend/api/: THROTTLING.md  THROTTLING_QUICK_REF.md  apps.py  audit_integrity.py  auth.py  auth_access_key.py  cerbos_client.py  email.py  encryption.py  idempotency.py  impersonation.py  licensing.py  local_jwt.py  lockout_tracking.py  mfa.py  middleware.py  models.py  routing.py  (+55 more)
compose/: docker-compose.prod.external.yml  docker-compose.prod.yml  docker-compose.yml
devtasks/: 01-repo-tooling.md  02-containers.md  03-django-setup.md  04-keycloak.md  05-auth-pipeline.md  06-data-model.md  07-cerbos.md  08-licensing-stripe.md  09-admin-boundaries.md  10-async-broker.md  11-security-baseline.md  12-observability.md  13-testing-ci.md  14-docs.md
frontend/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
keycloak/: realm-app.json
policies/: .cerbos.yaml  audit_log.yaml  division.yaml  membership.yaml  org.yaml  sample_resource.yaml  team.yaml  user.yaml
scripts/: fetch_jwks.py  security_check.py
src/: celerybeat-schedule
test-seed/: README.md  keycloak_seed.py  keycloak_tokens.py  seed.py
(+480 files in other folders)
